# multistream-relay

./: .gitignore  CLAUDE.md  README.md  gemini.md  macvpc.md  production-checklist.md  termination-system-plan.md  vastbroker-v2.md  vastbroker.txt  vps-hub-phase1.md  vps-hub-phase2.md  vps-hub-plan.md  web-rebuild-spec.md
.github/workflows/: relay-docker.yml  web-ci.yml
docs/: ARCHITECTURE.md  PRODUCT_PLAN.md  production-checklist.md
docs/archive/: README.md  audit-fixes.md  srt-rtmp-split-plan.md  termination-system-plan.md  vps-hub-livetest.md  vps-hub-phase1.md  vps-hub-phase2.md  vps-hub-plan.md  web-rebuild-spec.md
obs-relay-control/: BUILD.md  CMakeLists.txt
obs-relay-control/.github/workflows/: release.yml
obs-relay-control/cmake/macos/: Info.plist  buildspec.cmake
obs-relay-control/data/locale/: en-US.ini
obs-relay-control/installers/macos/: build-installer.sh  conclusion.html  distribution.xml  welcome.html
obs-relay-control/installers/windows/: build-installer.bat  installer.nsi
obs-relay-control/src/: cloud-provider.cpp  cloud-provider.hpp  plugin-main.cpp  relay-api.cpp  relay-api.hpp  relay-dock.cpp  relay-dock.hpp
relay/: Dockerfile  README.md  agent.py  app.py  bpm_inject.py  bridge_proxy.py  budget.py  config.example.json  docker-compose.yml  hook.sh  mediamtx.vps.yml  mediamtx.yml  requirements.txt  run.sh  setup.sh  start.sh  supervisor.py  test_bridge_proxy.py
relay/static/: index.html
slimcast-obs/: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json
slimcast-obs/.github/workflows/: release.yml
slimcast-obs/cmake/common/: bootstrap.cmake
slimcast-obs/cmake/macos/: Info.plist
slimcast-obs/cmake/windows/: buildspec.cmake
slimcast-obs/data/locale/: en-US.ini
slimcast-obs/installers/macos/: build-installer.sh
slimcast-obs/src/: HealthGraphWidget.cpp  HealthGraphWidget.h  plugin-main.cpp  provider-presets.hpp  relay-api.cpp  relay-api.hpp  relay-dock.cpp  relay-dock.hpp
supabase/: 20260624000004_connection_metrics.sql
supabase/.temp/: pooler-url  project-ref
web/: instrumentation.ts  middleware.ts  package-lock.json  package.json  proxy.ts  vercel.json
web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
web/app/(marketing)/: layout.tsx  page.tsx
web/app/(marketing)/faq/: page.tsx
web/app/(marketing)/features/: page.tsx
web/app/(marketing)/pricing/: page.tsx
web/app/(marketing)/privacy/: page.tsx
web/app/(marketing)/terms/: page.tsx
web/app/api/apikey/: route.ts
web/app/api/client-error/: route.ts
web/app/api/encode/: route.ts
web/app/api/gpu/: route.ts
web/app/api/health/: route.ts
web/app/api/output-settings/: route.ts
web/app/api/portrait-crop/: route.ts
web/app/api/pricing/: route.ts
web/app/dashboard/: error.tsx  loading.tsx  page.tsx
web/app/faq/: page.tsx
web/app/features/: page.tsx
web/app/link/: page.tsx
web/app/login/: page.tsx
web/app/obs-dock/: page.tsx
web/app/onboarding/: page.tsx
web/app/pricing/: page.tsx
web/app/signup/: page.tsx
web/components/: ConnectionHealthGraph.tsx  cost-meter.tsx  crt-overlay.tsx  dashboard-nav.tsx  logo.tsx  platform-icon.tsx  portrait-crop-editor.tsx  scanline-toggle.tsx  site-footer.tsx  site-nav.tsx  stream-manager.tsx
web/components/auth/: auth-panel.tsx
web/components/dashboard/: achievement-grid.tsx  balance-card.tsx  platform-connect-card.tsx  session-history.tsx  stat-tile.tsx  subscription-card.tsx
web/components/marketing/: feature-card.tsx  feature-split.tsx  platform-marquee.tsx  pricing-card.tsx  stat-tile.tsx  step-card.tsx
web/components/onboarding/: stepper.tsx
web/components/ui/: aurora-background.tsx  badge.tsx  button.tsx  card.tsx  gradient-text.tsx  input.tsx  kicker.tsx  live-dot.tsx
web/lib/: agent-auth.ts  agent-config.ts  billing-clock.ts  billing.ts  client-error.ts  cloud-init.ts  crypto.ts  datacenters.ts  gpu-broker.ts  gpu-ready.ts  keys.ts  managed-identity.ts  nvenc-utils.ts  oauth.ts  observability.ts  orphan-reconcile.ts  pod-teardown.ts  rate-limit.ts  runpod.ts  stripe.ts  supabase.ts  twitch-eligibility.ts  vps-broker.ts  youtube-health.ts
web/lib/providers/: hetzner.ts  index.ts  runpod.ts  types.ts  vast.ts
web/scripts/: build-hetzner-snapshot.mjs  setup-stripe.mjs  test-billing.ts  test-dc-pin.mjs  test-hetzner.mjs  test-provider-backfill.assert.sql  test-provider-backfill.bootstrap.sql  test-provider-universality.ts  test-universal-lease.assert.sql  test-universal-lease.bootstrap.sql  test-vast-rent.mjs  test-vast.mjs
web/supabase/.temp/: linked-project.json
web/supabase/migrations/: 20260617000000_initial_schema.sql  20260617000001_agent_schema.sql  20260617000002_auto_refill.sql  20260618000001_fix_trigger.sql  20260618000002_debug_trigger.sql  20260618000003_portrait_crop.sql  20260618000004_gpu_broker.sql  20260618000005_burn_rate.sql  20260619000001_output_status.sql  20260619000002_group_bitrate.sql  20260619000003_pod_safety.sql  20260622000001_session_recording.sql  20260622000002_security_hardening.sql  20260622000003_device_link.sql  20260622000004_ingest_addr.sql  20260623000001_hls_port.sql  20260623000002_twitch_rtmps.sql  20260623000003_enhanced_twitch.sql  20260624000001_drop_enhanced_twitch.sql  20260624000002_platform_oauth.sql  20260624000003_per_output_settings.sql  20260625000001_srt_mode.sql  20260625000002_srt_only_vast.sql  20260626000001_srt_encryption_panel.sql  20260626000002_connection_metrics.sql  20260626000003_budget_throttle.sql  20260627000001_broker_v2.sql  20260627000002_twitch_hevc_eligibility.sql  20260628000001_vps_hub_nodes.sql  20260628000002_vps_hubs.sql  20260628000003_vps_hub_secrets.sql  20260628000004_vps_hub_empty_since.sql  20260628000005_vps_hub_review_fixes.sql  20260628000006_gpu_bridge_index.sql  20260628000007_credits_drift_reconcile.sql  20260628000008_two_tier_billing.sql  20260628000009_universal_lease.sql  20260628000010_lease_hardening.sql  20260628000011_provider_backfill.sql  20260628000012_primary_platform.sql  (+10 more)
web/supabase/test/: assert.sql  bootstrap.sql
(+38 files in other folders)
